[MD Bookmarks] Implement drag drop chip in Views.

This CL deletes the JS implementation of the drag drop chip in the
Bookmark Manager and replaces it with a native drag. This decouples
the drag implementation from certain non-standard web drag behavior
which is getting removed.

Bug: 878392, 881336
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: I862f2b675d371ed0a5a60fbbdbfe72a9c02cbd36
Reviewed-on: https://chromium-review.googlesource.com/c/1221166
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Alan Cutter <alancutter@chromium.org>
Commit-Queue: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597767}
Former-commit-id: 1ebfa2b597832dc94c9f3012871c5a92dd7b35b3